--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -56,3 +56,4 @@ set_target_properties(libgtest PROPERTIES
 # #include_directories("${source_dir}/include")
 
 add_subdirectory(LaunchSite)
+add_subdirectory(Stage)
