Show code coverage. At 100% currently...
Command:
$ cd ~/chrysaor/build && rm -rf * && cmake \
  -DCMAKE_BUILD_TYPE=Coverage ../ && make -j9 && \
  make test && make chrysaor_coverage && \
  sensible-browser coverage/index.html

or
$ ./coverage.sh

Cmake module is from:
https://github.com/bilke/cmake-modules/blob/master/CodeCoverage.cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ endif(CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
 
 project(chrysaor CXX)
 
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
+
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED on)
 
@@ -48,3 +50,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(src)
 add_subdirectory(test)
+
+if(CMAKE_BUILD_TYPE STREQUAL "Coverage" AND CMAKE_COMPILER_IS_GNUCXX)
+  include(CodeCoverage)
+  setup_target_for_coverage(coverage make coverage test)
+endif(CMAKE_BUILD_TYPE STREQUAL "Coverage" AND CMAKE_COMPILER_IS_GNUCXX)
