--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 
+add_subdirectory(Vec3)
+
 add_subdirectory(LaunchSite)
 add_subdirectory(Stage)
 add_subdirectory(CubicCurvePoint)
