SpecificOrbitalEnergy + doc + tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(Vec3)
 add_subdirectory(CelestialBody)
 
 add_subdirectory(SemiMajorAxis)
+add_subdirectory(SpecificOrbitalEnergy)
 
 add_subdirectory(LaunchSite)
 add_subdirectory(Stage)
