--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,10 @@
 cmake_minimum_required(VERSION 3.5)
 
+add_library(libchrysaor SHARED
+  SemiMajorAxis.cpp
+  SpecificOrbitalEnergy.cpp
+)
+
+set_target_properties(libchrysaor PROPERTIES OUTPUT_NAME chrysaor)
+
 add_executable(chrysaor main.cpp)
