--- a/test/SemiMajorAxis/CMakeLists.txt
+++ b/test/SemiMajorAxis/CMakeLists.txt
@@ -3,5 +3,6 @@ cmake_minimum_required(VERSION 3.5)
 add_executable(SemiMajorAxis SemiMajorAxis.cpp CircularOrbit.cpp EllipticalOrbit.cpp main.cpp)
 
 target_link_libraries(SemiMajorAxis libgtest)
+target_link_libraries(SemiMajorAxis libchrysaor)
 
 add_test(SemiMajorAxis SemiMajorAxis)
