--- a/test/SpecificOrbitalEnergy/CMakeLists.txt
+++ b/test/SpecificOrbitalEnergy/CMakeLists.txt
@@ -3,5 +3,6 @@ cmake_minimum_required(VERSION 3.5)
 add_executable(SpecificOrbitalEnergy SpecificOrbitalEnergy.cpp CircularOrbit.cpp EllipticalOrbit.cpp main.cpp)
 
 target_link_libraries(SpecificOrbitalEnergy libgtest)
+target_link_libraries(SpecificOrbitalEnergy libchrysaor)
 
 add_test(SpecificOrbitalEnergy SpecificOrbitalEnergy)
