--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.5)
 add_library(libchrysaor SHARED
   SemiMajorAxis.cpp
   SpecificOrbitalEnergy.cpp
+  OrbitalEccentricity.cpp
 )
 
 set_target_properties(libchrysaor PROPERTIES OUTPUT_NAME chrysaor)
