Implement SpecificRelativeAngularMomentum class
Will be needed to further test implementation of ecc class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.5)
 add_library(libchrysaor SHARED
   SemiMajorAxis.cpp
   SpecificOrbitalEnergy.cpp
+  SpecificRelativeAngularMomentum.cpp
   OrbitalEccentricity.cpp
 )
 
