Drop CircularOrbitTest, add it's data into EllipticalOrbitTest.
Since circular orbit is an elliptical orbit with zero
eccentricity, it makes sense not to duplicate code...

--- a/test/OrbitalEccentricity/CMakeLists.txt
+++ b/test/OrbitalEccentricity/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-add_executable(OrbitalEccentricity OrbitalEccentricity.cpp CircularOrbit.cpp EllipticalOrbit.cpp main.cpp)
+add_executable(OrbitalEccentricity OrbitalEccentricity.cpp EllipticalOrbit.cpp main.cpp)
 
 target_link_libraries(OrbitalEccentricity libgtest)
 target_link_libraries(OrbitalEccentricity libchrysaor)
