--- a/test/SemiMajorAxis/CMakeLists.txt
+++ b/test/SemiMajorAxis/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-add_executable(SemiMajorAxis SemiMajorAxis.cpp CircularOrbit.cpp EllipticalOrbit.cpp main.cpp)
+add_executable(SemiMajorAxis SemiMajorAxis.cpp EllipticalOrbit.cpp main.cpp)
 
 target_link_libraries(SemiMajorAxis libgtest)
 target_link_libraries(SemiMajorAxis libchrysaor)
