--- a/test/SpecificOrbitalEnergy/CMakeLists.txt
+++ b/test/SpecificOrbitalEnergy/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-add_executable(SpecificOrbitalEnergy SpecificOrbitalEnergy.cpp CircularOrbit.cpp EllipticalOrbit.cpp main.cpp)
+add_executable(SpecificOrbitalEnergy SpecificOrbitalEnergy.cpp EllipticalOrbit.cpp main.cpp)
 
 target_link_libraries(SpecificOrbitalEnergy libgtest)
 target_link_libraries(SpecificOrbitalEnergy libchrysaor)
