--- a/test/SpecificRelativeAngularMomentum/CMakeLists.txt
+++ b/test/SpecificRelativeAngularMomentum/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-add_executable(SpecificRelativeAngularMomentum SpecificRelativeAngularMomentum.cpp CircularOrbit.cpp EllipticalOrbit.cpp main.cpp)
+add_executable(SpecificRelativeAngularMomentum SpecificRelativeAngularMomentum.cpp EllipticalOrbit.cpp main.cpp)
 
 target_link_libraries(SpecificRelativeAngularMomentum libgtest)
 target_link_libraries(SpecificRelativeAngularMomentum libchrysaor)
