--- a/test/CelestialBody/CMakeLists.txt
+++ b/test/CelestialBody/CMakeLists.txt
@@ -4,4 +4,4 @@ add_executable(CelestialBody CelestialBody.cpp main.cpp)
 
 target_link_libraries(CelestialBody libgtest)
 
-add_test(CelestialBody CelestialBody)
+GTEST_ADD_TESTS(CelestialBody "" AUTO)
