--- a/test/CubicCurvePoint/CMakeLists.txt
+++ b/test/CubicCurvePoint/CMakeLists.txt
@@ -4,4 +4,4 @@ add_executable(CubicCurvePoint CubicCurvePoint.cpp main.cpp)
 
 target_link_libraries(CubicCurvePoint libgtest)
 
-add_test(CubicCurvePoint CubicCurvePoint)
+GTEST_ADD_TESTS(CubicCurvePoint "" AUTO)
