--- a/test/SemiMajorAxis/CMakeLists.txt
+++ b/test/SemiMajorAxis/CMakeLists.txt
@@ -5,4 +5,4 @@ add_executable(SemiMajorAxis SemiMajorAxis.cpp EllipticalOrbit.cpp main.cpp)
 target_link_libraries(SemiMajorAxis libgtest)
 target_link_libraries(SemiMajorAxis libchrysaor)
 
-add_test(SemiMajorAxis SemiMajorAxis)
+GTEST_ADD_TESTS(SemiMajorAxis "" AUTO)
