--- a/test/Stage/CMakeLists.txt
+++ b/test/Stage/CMakeLists.txt
@@ -4,4 +4,4 @@ add_executable(Stage Stage.cpp main.cpp)
 
 target_link_libraries(Stage libgtest)
 
-add_test(Stage Stage)
+GTEST_ADD_TESTS(Stage "" AUTO)
