--- a/test/libchrysaor/CMakeLists.txt
+++ b/test/libchrysaor/CMakeLists.txt
@@ -14,3 +14,4 @@ add_subdirectory(LaunchSite)
 add_subdirectory(Stage)
 add_subdirectory(CubicCurvePoint)
 add_subdirectory(CubicCurve)
+add_subdirectory(IdealGas)
