--- a/test/libchrysaor/CMakeLists.txt
+++ b/test/libchrysaor/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(Stage)
 add_subdirectory(CubicCurvePoint)
 add_subdirectory(CubicCurve)
 add_subdirectory(IdealGas)
+add_subdirectory(FluidDynamics)
