--- a/src/libchrysaor/Curve/CMakeLists.txt
+++ b/src/libchrysaor/Curve/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.5)
 
 target_sources(libchrysaor
   PRIVATE
-    "${CMAKE_CURRENT_SOURCE_DIR}/CubicCurvePoint.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/CubicCurve.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/AbstractCurvePoint.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/LinearCurvePoint.cpp"
 )
