--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,5 +139,5 @@ endif(BUILD_TESTING)
 
 if(CMAKE_BUILD_TYPE STREQUAL "Coverage" AND CMAKE_COMPILER_IS_GNUCXX)
   include(CodeCoverage)
-  setup_target_for_coverage(coverage make coverage test)
+  setup_target_for_coverage(coverage ctest coverage)
 endif(CMAKE_BUILD_TYPE STREQUAL "Coverage" AND CMAKE_COMPILER_IS_GNUCXX)
