--- a/test/libchrysaor/CMakeLists.txt
+++ b/test/libchrysaor/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(Stage)
 add_subdirectory(Curve)
 add_subdirectory(IdealGas)
 add_subdirectory(FluidDynamics)
+add_subdirectory(Atmosphere)
