--- a/test/libchrysaor/CMakeLists.txt
+++ b/test/libchrysaor/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory(Curve)
 add_subdirectory(IdealGas)
 add_subdirectory(FluidDynamics)
 add_subdirectory(Atmosphere)
+add_subdirectory(Vehicle)
