Let's try to use -Wframe-larger-than=256

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 
+ADD_DEFINITIONS(-Wframe-larger-than=256)
+
 add_subdirectory(libchrysaor)
 
 add_executable(chrysaor main.cpp)
