Rework stage class, use engine class

--- a/src/libchrysaor/Vehicle/CMakeLists.txt
+++ b/src/libchrysaor/Vehicle/CMakeLists.txt
@@ -3,4 +3,5 @@ cmake_minimum_required(VERSION 3.5)
 target_sources(libchrysaor
   PRIVATE
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Stage.cpp"
 )
